--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
     <section id="about" class="About text-light" style="background-color: #004225">
       <div class="row text-center mb-5">
         <div class="col">
-          <h1 class="fw-bold" style="color: goldenrod">About Me</h1>
+          <h1 class="fw-bold" style="color: goldenrod; font-size: 35px">About Me</h1>
         </div>
       </div>
       <div class="row justify-content-center fs-5">
-        <div class="col-4">
-          <p style="color: beige; font-family: 'Montserrat', sans-serif; text-indent: 35px; text-align: justify">
+        <div class="col-md-4">
+          <p style="color: beige; font-family: 'Montserrat', sans-serif; text-indent: 35px; text-align: justify; margin: 20px">
             Perkenalkan, saya Reyrha Alethea Aralunna, atau yang biasa disapa Rere, seorang pelajar di SMA Negeri 2 Bojonegoro jurusan IPS. Saya sangat mencintai seni, terutama teater, dan tergabung dalam tim teater KAKUS SMADA di sekolah.
             Melalui akting, saya dapat melihat dunia dari sudut pandang yang berbeda, memperdalam apresiasi terhadap seni dan budaya lokal, serta mengeksplorasi kreativitas tanpa batas. Teater bagi saya bukan hanya tentang bermain peran,
             tetapi juga sarana untuk mengembangkan diri, berpikir kritis, dan menambah wawasan tentang berbagai bentuk ekspresi seni.
           </p>
         </div>
 
-        <div class="col-4">
-          <p style="color: beige; font-family: 'Montserrat', sans-serif; text-indent: 35px; text-align: justify">
+        <div class="col-md-4">
+          <p style="color: beige; font-family: 'Montserrat', sans-serif; text-indent: 35px; text-align: justify; margin: 20px">
             Selain aktif di dunia seni, saya juga tergabung dalam Ikatan Pelajar Muhammadiyah (IPM), yang fokus pada pengembangan karakter dan kepemimpinan pelajar. Di IPM, saya mengasah kemampuan sosial, kepemimpinan, dan kewirausahaan,
             serta belajar bekerja sama dalam tim dan berorganisasi. Organisasi ini juga mengajarkan saya tentang nilai-nilai Islam yang moderat, yang membantu membentuk pribadi yang lebih bertanggung jawab, kritis, dan peduli terhadap
             sesama.
@@ -108,7 +108,7 @@
     <section id="projects">
       <div class="row text-center mb-5">
         <div class="col">
-          <h1 class="fw-bold" style="color: #004225">My Projects</h1>
+          <h1 class="fw-bold" style="color: #004225; font-size: 35px">My Projects</h1>
         </div>
       </div>
       <style>
@@ -187,7 +187,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h1 class="fw-bold" style="font-family: 'EB+Garamond', serif';">Contact Me</h1>
+            <h1 class="fw-bold" style="font-size: 35px ;font-family: 'EB+Garamond', serif';">Contact Me</h1>
           </div>
         </div>
         <div class="row justify-content-center">
